// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "accept": undefined,
      "children": <ButtonBlock
        actions={Object {}}
        blockId="default_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": false,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "default",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": false,
      "id": "default",
      "multiple": true,
      "onChange": [Function],
      "showUploadList": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "accept": undefined,
      "children": <ButtonBlock
        actions={Object {}}
        blockId="default_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": false,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "default",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": false,
      "id": "default",
      "multiple": true,
      "onChange": [Function],
      "showUploadList": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.accept - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "accept": ".png,.jpg",
      "children": <ButtonBlock
        actions={Object {}}
        blockId="properties.accept_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": false,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "default",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": false,
      "id": "properties.accept",
      "multiple": true,
      "onChange": [Function],
      "showUploadList": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "accept": ".png,.jpg",
      "children": <ButtonBlock
        actions={Object {}}
        blockId="properties.accept_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": false,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "default",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": false,
      "id": "properties.accept",
      "multiple": true,
      "onChange": [Function],
      "showUploadList": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.button - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "accept": undefined,
      "children": <ButtonBlock
        actions={Object {}}
        blockId="properties.button_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": false,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "primary",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": false,
      "id": "properties.button",
      "multiple": true,
      "onChange": [Function],
      "showUploadList": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "accept": undefined,
      "children": <ButtonBlock
        actions={Object {}}
        blockId="properties.button_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": false,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "primary",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": false,
      "id": "properties.button",
      "multiple": true,
      "onChange": [Function],
      "showUploadList": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "accept": undefined,
      "children": <ButtonBlock
        actions={Object {}}
        blockId="properties.disabled_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": true,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "default",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": true,
      "id": "properties.disabled",
      "multiple": true,
      "onChange": [Function],
      "showUploadList": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "accept": undefined,
      "children": <ButtonBlock
        actions={Object {}}
        blockId="properties.disabled_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": true,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "default",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": true,
      "id": "properties.disabled",
      "multiple": true,
      "onChange": [Function],
      "showUploadList": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.showUploadList - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "accept": undefined,
      "children": <ButtonBlock
        actions={Object {}}
        blockId="properties.showUploadList_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": false,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "default",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": false,
      "id": "properties.showUploadList",
      "multiple": true,
      "onChange": [Function],
      "showUploadList": true,
    },
    Object {},
  ],
  Array [
    Object {
      "accept": undefined,
      "children": <ButtonBlock
        actions={Object {}}
        blockId="properties.showUploadList_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": false,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "default",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": false,
      "id": "properties.showUploadList",
      "multiple": true,
      "onChange": [Function],
      "showUploadList": true,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.singleFile - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "accept": undefined,
      "children": <ButtonBlock
        actions={Object {}}
        blockId="properties.singleFile_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": false,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "default",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": false,
      "id": "properties.singleFile",
      "multiple": false,
      "onChange": [Function],
      "showUploadList": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "accept": undefined,
      "children": <ButtonBlock
        actions={Object {}}
        blockId="properties.singleFile_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "disabled": false,
            "icon": "UploadOutlined",
            "title": "Upload",
            "type": "default",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "customRequest": undefined,
      "disabled": false,
      "id": "properties.singleFile",
      "multiple": false,
      "onChange": [Function],
      "showUploadList": undefined,
    },
    Object {},
  ],
]
`;
